--- a/DocumentBuilder/Test/Test.uxml
+++ b/DocumentBuilder/Test/Test.uxml
@@ -1,2 +1,3 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <ui:Toggle label="Toggle" style="background-color: rgba(255, 255, 255, 255);" />
 </ui:UXML>
